<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">staffy</string>
    <string name="title_lastName">Apellido paterno</string>
    <string name="title_motherLastName">Apellido materno</string>
    <string name="title_mail">Correo</string>
    <string name="title_numberPhone">Numero Telefonico</string>
    <string name="title_extension">Extensión</string>
    <string name="title_name">Nombre</string>
    <string-array name="Games">
        <item>Selecciona</item>
        <item>Posición 1 </item>
        <item>Posición 2 </item>
        <item>Posición 3 </item>
    </string-array>
    <string-array name="Games2">
        <item>Selecciona</item>
        <item>Posicion 1 </item>
        <item>Posicion 2 </item>
        <item>Posicion 3 </item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="session">User</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="forget_your_password">¿Olvidaste tu contraseña?</string>
    <string name="acept">Login</string>
    <string name="send">Enviar</string>
    <string name="error_input_login">Llena correctamente los campos</string>
    <string name="notifications">Notificaciones</string>
    <string name="tab_activityM">Actividades</string>
    <string name="tab_calendarM">Calendario</string>
    <string name="send_email"> Se envió correo a:</string>
    <string name="Perfil">Perfiles</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_referencia">referencia</string>
    <string name="log_out_item">Cerrar sesión</string>
    <string name="configuration_item">Configuración</string>
    <string name="requests_item">Solicitudes</string>
    <string name="purse_item">Cartera</string>
    <string name="recruiter_item">Reclutador</string>
    <string name="evaluators_praxis_item">Consultores Praxis</string>
    <string name="customers_item">Cliente</string>
    <string name="draft_item">Proyecto</string>
    <string name="retro_item">Retros</string>
    <string name="nameCardNotification">Ivonne R.</string>
    <string name="textTimeCardNotification">5 minutos</string>
    <string name="textDescriptionCardNotification">Terminó la etapa de filtro para el proyecto sura servicios.</string>
    <string name="txt_you_must_enter_an_email_msg">Debes escribir un mail</string>
    <string name="the_mail_was_not_found_msg">El correo no fue encontrado.</string>
    <string name="title_proyect">Proyectos</string>
    <string name="title_start">Por iniciar</string>
    <string name="title_starting">Iniciados</string>
    <string name="title_started">Finalizados</string>
    <string name="title_sura">Sura negocios</string>
    <string name="title_telcel">Telcel</string>
    <string name="title_writeTo">Escriba a</string>
    <string name="addEmailHelp">Ingrese el correo</string>
    <string name="sendMail">Enviar</string>
    <string name="title_addproyec">Agregar proyecto</string>
    <string name="title_sendto">Nombre del proyecto</string>
    <string name="title_time_statar">Fecha inicial</string>
    <string name="title_time_finish">Fecha final</string>
    <string name="title_observation">Observaciones</string>
    <string name="contac">Contacto</string>
    <string name="direction">Dirección</string>
    <string name="direction_option1">Dirección 1</string>
    <string name="direction_option2">Dirección 2</string>
    <string name="direction_street">Calle</string>
    <string name="direction_number">Número</string>
    <string name="direction_colony">Colonia</string>
    <string name="direction_CP">C.P.</string>
    <string name="direction_municipality">Municipio</string>
    <string name="direction_state">Estado</string>
    <string name="direction_streetSUB">Paseo de las lomas</string>
    <string name="direction_numberSUB">23-A</string>
    <string name="direction_colonySUB">Las lomas</string>
    <string name="direction_CPSUB">30065</string>
    <string name="direction_municipalitySUB">Las Lomas</string>
    <string name="direction_stateSUB">Ciudad de México</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="show_requi">Ver requisición</string>
    <string name="title_editproyect">Editar Proyecto</string>
    <string name="option_direction">Estas son las direcciones registradas para el cliene.
        Por favor selecciona la que corresponda al proyecto.</string>
    <string name="open_sesion">Cerrar sesión</string>
    <string name="requests">Solicutudes</string>
    <string name="accept">Aceptar</string>
    <string name="cancel_sesion">Cancelar</string>
    <string name="confirmation">¿Esta seguro que desea cerrar sesión?</string>
    <string name="accept_close_sesion">¿Deseas cerrar sesión?""</string>
    <string name="bye">Hasta pronto :D</string>
    <string name="title_about">Acerca de Staffy :D</string>
    <string name="title_purse">Cartera</string>
    <string name="title_requests">Solicitudes</string>
    <string name="description">Descripción</string>
    <string name="status">Estatus</string>
    <string name="fill">Vefifique este campo por favor</string>
    <string name="editTools">Modificar Herramientas</string>
    <string name="select_request">Seleccione la Herramienta</string>
    <string name="id">ID</string>
    <string name="editRequest">Modifcar solicitud</string>
    <string name="title_street">Calle</string>
    <string name="title_reference">Referencia</string>
    <string name="title_cp">C.P</string>
    <string name="title_municipality">Del./Municipio</string>
    <string name="title_number">Número</string>
    <string name="title_colony">Colonia</string>
    <string name="title_state">Estado</string>
    <string name="title_adduser">Agregar usuario</string>
    <string name="title_edituser">Modificar mi información</string>
    <string name="title_textAbout">Staffy está creada para el personal del área de coordinación y asignaciones de la gerencia de soluciones móviles de praxis México.
            El objetivo es mejorar la gestión de recordatorio de actividades a realizar y optimizar la gestión de sus datos.</string>
    <string name="invalid_email_recover_password_enter_mail">Correo invalido.</string>
    <string name="error_body_recover_password_web_services">Error general.</string>
    <string name="level">Nivel</string>
    <string name="result_obser">A través del proyecto sistema detallista
    se pretende que el cliente por medio de
    una aplicación móvil pueda solicitar los
    productos que va a requerir.
    </string>
    <string-array name="perfil_string">
        <item>Junior</item>
        <item>Master</item>
        <item>Senior</item>
        <item>Semisenior</item>
    </string-array>
    <string name="view_proyect_txt">Proyecto</string>
    <string name="request_txt">Requiere</string>
    <string name="about_this_app">Área de coordinación y asiganaciones para soluciones móviles Praxis, México.</string>
    <string name="txt_name_resource_details_assessment">Miguel Betancourt Cravioto</string>
    <string name="expert_to_perform_filter_view">Experto a realizar fltro</string>
    <string name="loading">Cargando..</string>
    <string name="about_proyect_example">Proyecto de desarrollo en HTML, venta de productos.</string>
    <string name="punt_details_requi">-</string>
    <string name="example_perfil_details_requi">Java</string>
    <string name="example_number_requi_details_requi">2</string>
    <string name="example_perfil_details_requi2">Administrador de BD </string>
    <string name="exampler_rango_details_requi">Junior</string>
    <string name="exampler_rango_details_requi2">senior</string>
    <string name="text_btn_exmaple_requi">Java Junior SQlite Requi: 5588</string>
    <string name="text_btn_exmaple_requi2">Android Requi: 58439</string>
    <string name="text_requi_details_requi">Requi : </string>
    <string name="example_number_requi_details">559394</string>
    <string name="btn_postular_details_requi">Postular</string>
    <string name="btn_view_postulates">Ver Postulados</string>
    <string name="example_name_profile">Selecionar</string>
    <string name="example_email_profile">m_btncourt@correo.com.mx</string>
    <string name="example_phone_profile">55 1132 3512</string>
    <string name="alert">Alerta</string>
    <string name="title_postulant">Postulante</string>
    <string name="alertCancel">¿Desea salir sin guardar un nada?</string>
    <string name="title_cocacola">Coca-Cola</string>
    <string name="title_delMunicipality">Delegación/Miunicipio</string>
    <string name="titulo6_nombree">TitleNombre6</string>
    <string name="tool">Herramientas</string>
    <string name="formats">Formatos</string>
    <string name="permission">Permisos</string>
    <string name="requesstt">Registrar Herramienta</string>
    <string name="request">Solicitar</string>
    <string name="requestt">Modificar Herramienta</string>
    <string name="requisition">Numero de requisición</string>
    <string name="deadline">Fecha limite</string>
    <string name="postu">Cantidad de Postulantes</string>
    <string name="perfil">Perfil</string>
    <string name="candites">Candidatos</string>
    <string name="results">Resultado</string>
    <string name="post_proyect">Postulante para el proyecto</string>
    <string name="expert">Experto a realizar filtro</string>
    <string name="date_filter">Fecha de fltro</string>
    <string name="hour_filter">Hora</string>
    <string name="interviewer">Entrevistador</string>
    <string name="email_send">Enviar correo a:</string>
    <string name="companion">Acompañante</string>
    <string name="ubication">Ubicación</string>
    <string name="users">Usuarios</string>
    <string name="notification">Notificaciones</string>
    <string name="about">Acerca de </string>
    <string name="programming">Programación</string>
    <string name="database">Base de datos</string>
    <string name="example_name_resource_evaluation">Miguel Betancourt Cravioto</string>
    <string name="example_name_expert_evaluation">Manuel Vázquez Hernández</string>
    <string name="example_data_evaluation">10/09/2018</string>
    <string name="example_hours_evaluation">10:00</string>
    <string name="example_result_evaluation">Sobresaliente</string>
    <string name="example_obs_evaluation">El postulante está capacitado con conocimientos de tecnología orientada a objetos (TOO), construye aplicaciones utilizando el lenguaje de programación</string>
    <string name="hint_date">dd/mm/aaaa</string>
    <string name="title_seniorProfile">Senior</string>
    <string name="title_java">JAVA</string>
    <string name="poup_confirmation">Confirmar</string>
    <string name="poup_exito">Éxito</string>
    <string name="text_btn_to_acept_poup">Aceptar</string>
    <string name="poup_alerta">Alerta</string>
    <string name="poup_esta_seguro">¿Ésta seguro?</string>
    <string name="poup_Los_cambios_no_se_guardarán">Los cambios no se guardarán.</string>
    <string name="poup_no">No</string>
    <string name="poup_si">Si</string>
    <string name="poup_btn_no_enviar">No enviar</string>
    <string name="poup_btn_si_enviar">Si enviar</string>
    <string name="poup_no_has_selecionado_ningun_postulante">No has selecionado ningún postulante</string>
    <string name="poup_desea_enviar_la_solicitud_sin_agregarlos">¿Desea enviar la solicitud sin agregarlos?</string>
    <string name="poup_entrevista_registrada_correctamente">Entrevista registrada correctamente.</string>
</resources>