<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout-root3"
   android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_height="wrap_content"
    android:background="@drawable/poup_rendox"
    android:elevation="4dp"

    android:orientation="vertical">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/poup_alerta"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text_backgorund_poup"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageButton"
        android:layout_width="201dp"
        android:layout_height="180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_poup_alert" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="230dp"
        android:layout_height="64dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/poup_no_has_selecionado_ningun_postulante"
        android:gravity="center"
        android:textColor="@color/text_backgorund_poup"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <TextView
        android:id="@+id/textView118"
        android:layout_width="220dp"
        android:layout_height="86dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/poup_desea_enviar_la_solicitud_sin_agregarlos"
        android:gravity="center"
        android:textColor="@color/text_backgorund_poup"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginTop="8dp"
        android:onClick="Cancelar"
        android:text="@string/poup_btn_no_enviar"
        android:elevation="2dp"
        android:theme="@style/RaisedButtonDarkCancel"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView118" />

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginTop="8dp"
        android:onClick="Aceptar"
android:elevation="2dp"
        android:text="@string/poup_btn_si_enviar"
        android:theme="@style/RaisedButtonDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/textView118" />


</android.support.constraint.ConstraintLayout>